<resources>
    <string name="app_name">Foodies Box</string>
    <string name="title_activity_home">Foodies Box</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Foodies Box</string>
    <string name="nav_header_subtitle">All Food Ordering Apps At Once</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">More</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_offers">Offers &amp; Coupons</string>
    <string name="menu_share">Share App</string>
    <string name="menu_gallery">Rate App</string>
    <string name="menu_slideshow">Privacy Policy</string>
</resources>