<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offer_"
            android:title="@string/menu_offers"
            />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rating"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_pp"
            android:icon="@drawable/ic_baseline_lock_open_24"
            android:title="@string/menu_slideshow" />
    </group>
</menu>